--- a/index.html
+++ b/index.html
@@ -1,84 +1,28 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>風向タイムライン</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-    }
-
-    .timeline {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-
-    .entry {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 40px;
-      font-size: 10px;
-    }
-
-    .arrow {
-      width: 0;
-      height: 0;
-      border-left: 8px solid transparent;
-      border-right: 8px solid transparent;
-      border-bottom: 20px solid gray;
-      transform-origin: bottom center;
-      transition: all 0.3s ease;
-    }
-
-    .highlight {
-      border-bottom-color: red !important;
-      filter: drop-shadow(0 0 5px orange);
-    }
-  </style>
-</head>
 <body>
-  <h2>風向タイムライン（過去24時間）</h2>
-  <div class="timeline" id="timeline"></div>
+  <div id="timeline"></div>
 
   <script>
     const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← Apps Script 公開URL
 
-    function getDirectionLabel(deg) {
-      if (deg >= 191.25 && deg < 213.75) return "SSW";
-      if (deg >= 213.75 && deg < 236.25) return "SW";
-      if (deg >= 236.25 && deg < 258.75) return "WSW";
-      return null;
-    }
-
     fetch(apiUrl)
-      .then(res => res.json())
+      .then(response => response.json())
       .then(data => {
-        const container = document.getElementById('timeline');
-        data.forEach(entry => {
-          const deg = entry.windDeg;
-          const time = new Date(entry.timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-          const label = getDirectionLabel(deg);
+        console.log("取得したデータ：", data);
 
-          const entryDiv = document.createElement('div');
-          entryDiv.className = 'entry';
+        if (!Array.isArray(data)) {
+          document.getElementById("timeline").textContent = "データが配列ではありません";
+          return;
+        }
 
-          const arrow = document.createElement('div');
-          arrow.className = 'arrow';
-          if (label) arrow.classList.add('highlight');
-          arrow.style.transform = `rotate(${deg}deg)`;
-
-          const text = document.createElement('div');
-          text.textContent = time;
-
-          entryDiv.appendChild(arrow);
-          entryDiv.appendChild(text);
-          container.appendChild(entryDiv);
+        data.forEach(item => {
+          const div = document.createElement("div");
+          div.textContent = `${item.timestamp} / ${item.windDeg}°`;
+          document.getElementById("timeline").appendChild(div);
         });
+      })
+      .catch(err => {
+        console.error("エラー：", err);
+        document.getElementById("timeline").textContent = "データ取得エラー";
       });
   </script>
 </body>
-</html>
