--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       width: 0;
       height: 0;
       transform-origin: bottom center;
+      transform: rotate(${(windDeg + 180) % 360}deg);
       transition: transform 0.5s ease;
     }
 
