--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       margin: 0 auto;
       border-left: 10px solid transparent;
       border-right: 10px solid transparent;
-      border-bottom: 15px solid red;
+      border-bottom: 15px solid green;
     }
   </style>
 </head>
