--- a/index.html
+++ b/index.html
@@ -2,89 +2,82 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>風向モニター</title>
+  <title>風向タイムライン</title>
   <style>
     body {
       font-family: sans-serif;
-      text-align: center;
       padding: 20px;
     }
 
-    .compass {
-      width: 200px;
-      height: 200px;
-      margin: 30px auto;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Compass_rose_en.svg/200px-Compass_rose_en.svg.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      position: relative;
+    .timeline {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+    }
+
+    .entry {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 40px;
+      font-size: 10px;
     }
 
     .arrow {
-      position: absolute;
-      top: 50%;
-      left: 50%;
       width: 0;
       height: 0;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-bottom: 20px solid gray;
       transform-origin: bottom center;
-      transition: transform 0.5s ease;
+      transition: all 0.3s ease;
     }
 
-    .arrow .shaft {
-      width: 6px;
-      height: 70px;
-      background-color: red;
-      margin: 0 auto;
-    }
-
-    .arrow .head {
-      width: 0;
-      height: 0;
-      margin: 0 auto;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-bottom: 15px solid green;
+    .highlight {
+      border-bottom-color: red !important;
+      filter: drop-shadow(0 0 5px orange);
     }
   </style>
 </head>
 <body>
-  <h1>風向モニター</h1>
-  <p id="info">データ取得中...</p>
-  <div class="compass">
-    <div class="arrow" id="arrow">
-      <div class="shaft" id="shaft"></div>
-      <div class="head"></div>
-    </div>
-  </div>
+  <h2>風向タイムライン（過去24時間）</h2>
+  <div class="timeline" id="timeline"></div>
 
   <script>
     const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← Apps Script 公開URL
 
+    function getDirectionLabel(deg) {
+      if (deg >= 191.25 && deg < 213.75) return "SSW";
+      if (deg >= 213.75 && deg < 236.25) return "SW";
+      if (deg >= 236.25 && deg < 258.75) return "WSW";
+      return null;
+    }
+
     fetch(apiUrl)
       .then(res => res.json())
       .then(data => {
-        const deg = data.windDeg || 0;
-        const speed = data.windSpeed || 0;
-        const humidity = data.humidity ?? '–';
-        const description = data.description ?? '不明';
-        const time = new Date(data.timestamp).toLocaleString();
+        const container = document.getElementById('timeline');
+        data.forEach(entry => {
+          const deg = entry.windDeg;
+          const time = new Date(entry.timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+          const label = getDirectionLabel(deg);
 
-        // 回転
-        const arrow = document.getElementById('arrow');
-        const correctedDeg = (deg + 180) % 360; 
-        arrow.style.transform = `rotate(${correctedDeg}deg)`;
+          const entryDiv = document.createElement('div');
+          entryDiv.className = 'entry';
 
-        // 太さ調整（風速によってシャフトの太さを変える）
-        const shaft = document.getElementById('shaft');
-        const thickness = Math.max(4, Math.min(speed * 2, 20)); // 4〜20px
-        shaft.style.width = `${thickness}px`;
+          const arrow = document.createElement('div');
+          arrow.className = 'arrow';
+          if (label) arrow.classList.add('highlight');
+          arrow.style.transform = `rotate(${deg}deg)`;
 
-        // テキスト
-        const info = `風向: ${deg}°　風速: ${speed.toFixed(1)} m/s　天気: ${description}　湿度: ${humidity}%（${time}）`;
-        document.getElementById('info').textContent = info;
-      })
-      .catch(err => {
-        document.getElementById('info').textContent = "データ取得エラー：" + err;
+          const text = document.createElement('div');
+          text.textContent = time;
+
+          entryDiv.appendChild(arrow);
+          entryDiv.appendChild(text);
+          container.appendChild(entryDiv);
+        });
       });
   </script>
 </body>
