--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>風向タイムライン</title>
+  <title>風向タイムライン（今日のみ）</title>
   <style>
     body {
       font-family: sans-serif;
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-  <h2>風向タイムライン（過去24時間）</h2>
+  <h2>風向タイムライン（今日のみ）</h2>
 
   <div class="timeline-section">
     <h3>午前</h3>
@@ -59,25 +59,37 @@
   </div>
 
   <script>
-    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← Apps Script 公開URL
+    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← 差し替えてください
 
-    // 北北東〜東北東の範囲で強調
     function isHighlighted(deg) {
       const norm = (deg + 360) % 360;
-      return norm >= 22.5 && norm <= 67.5;
+      return norm >= 22.5 && norm <= 67.5; // 北北東〜東北東
     }
 
     fetch(apiUrl)
       .then(res => res.json())
       .then(data => {
+        const now = new Date();
+        const todayY = now.getFullYear();
+        const todayM = now.getMonth();
+        const todayD = now.getDate();
+
         const amContainer = document.getElementById('timeline-am');
         const pmContainer = document.getElementById('timeline-pm');
 
         data.forEach(entry => {
+          const entryDate = new Date(entry.timestamp);
+          if (
+            entryDate.getFullYear() !== todayY ||
+            entryDate.getMonth() !== todayM ||
+            entryDate.getDate() !== todayD
+          ) {
+            return; // 今日以外はスキップ
+          }
+
           const deg = entry.windDeg;
-          const date = new Date(entry.timestamp);
-          const hour = date.getHours();
-          const time = date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+          const hour = entryDate.getHours();
+          const time = entryDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
 
           const entryDiv = document.createElement('div');
           entryDiv.className = 'entry';
@@ -103,4 +115,3 @@
   </script>
 </body>
 </html>
-
