--- a/index.html
+++ b/index.html
@@ -133,4 +133,8 @@
         });
       })
       .catch(err => {
-        a
+        alert("データ取得エラー：" + err);
+      });
+  </script>
+</body>
+</html>
