--- a/index.html
+++ b/index.html
@@ -11,30 +11,28 @@
     }
 
     h2 {
-      margin-bottom: 5px;
-    }
-
-    .date-nav {
-      margin: 10px;
+      margin-bottom: 10px;
     }
 
     .section {
-      margin-top: 20px;
+      margin-top: 30px;
     }
 
     .timeline {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 10px;
-      justify-items: center;
-      margin-bottom: 20px;
+      max-width: 800px;
+      margin: 0 auto;
     }
 
     .entry {
       display: flex;
       flex-direction: column;
       align-items: center;
-      font-size: 11px;
+      width: 40px;
+      font-size: 10px;
     }
 
     .arrow {
@@ -44,7 +42,7 @@
       border-right: 8px solid transparent;
       border-bottom: 20px solid gray;
       transform-origin: bottom center;
-      margin-bottom: 3px;
+      transition: all 0.3s ease;
     }
 
     .highlight {
@@ -52,89 +50,83 @@
       filter: drop-shadow(0 0 5px orange);
     }
 
-    .date-string {
-      font-weight: bold;
-      margin: 10px 0;
+    .nav {
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h2>風向タイムライン</h2>
-  <div class="date-nav">
-    <a id="prevLink" href="#">← 前日</a>　
-    <span class="date-string" id="dateText"></span>　
-    <a id="nextLink" href="#">翌日 →</a>
-  </div>
+  <h2 id="title">風向タイムライン</h2>
 
   <div class="section">
     <h3>午前</h3>
-    <div class="timeline" id="amTimeline"></div>
+    <div class="timeline" id="am-timeline"></div>
   </div>
 
   <div class="section">
     <h3>午後</h3>
-    <div class="timeline" id="pmTimeline"></div>
+    <div class="timeline" id="pm-timeline"></div>
+  </div>
+
+  <div class="nav">
+    <a href="#" id="prev">← 前日</a> ｜ <a href="#" id="next">翌日 →</a>
   </div>
 
   <script>
-    const apiBase = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← 置き換えてください
-    const params = new URLSearchParams(window.location.search);
-    const today = new Date();
-    const offset = parseInt(params.get("offset") || "0");
-    today.setDate(today.getDate() + offset);
-    const yyyyMMdd = today.toISOString().split('T')[0];
+    const urlParams = new URLSearchParams(window.location.search);
+    const targetDate = urlParams.get('date') || new Date().toISOString().split('T')[0];
+    document.getElementById('title').textContent = `風向タイムライン（${targetDate}）`;
 
-    // 日付表示
-    const dateText = document.getElementById("dateText");
-    dateText.textContent = `${today.getFullYear()}年${today.getMonth()+1}月${today.getDate()}日`;
+    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec?date=' + targetDate;
 
-    // ナビゲーションリンク
-    document.getElementById("prevLink").href = `?offset=${offset - 1}`;
-    document.getElementById("nextLink").href = `?offset=${offset + 1}`;
-
-    function isNorthEast(deg) {
-      const windDeg = deg % 360;
-      return windDeg >= 22.5 && windDeg <= 67.5;
+    // 北北東〜東北東（22.5〜67.5°）を強調
+    function shouldHighlight(deg) {
+      return deg >= 22.5 && deg < 67.5;
     }
 
-    fetch(`${apiBase}?date=${yyyyMMdd}`)
+    function renderTimeline(containerId, entries) {
+      const container = document.getElementById(containerId);
+      entries.forEach(entry => {
+        const deg = (entry.windDeg + 180) % 360; // 風下向きに修正
+        const time = new Date(entry.timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+
+        const entryDiv = document.createElement('div');
+        entryDiv.className = 'entry';
+
+        const arrow = document.createElement('div');
+        arrow.className = 'arrow';
+        if (shouldHighlight(deg)) arrow.classList.add('highlight');
+        arrow.style.transform = `rotate(${deg}deg)`;
+
+        const label = document.createElement('div');
+        label.textContent = time;
+        label.style.marginTop = "4px";  // 矢印との間隔を確保
+
+        entryDiv.appendChild(arrow);
+        entryDiv.appendChild(label);
+        container.appendChild(entryDiv);
+      });
+    }
+
+    fetch(apiUrl)
       .then(res => res.json())
       .then(data => {
-        const amTimeline = document.getElementById("amTimeline");
-        const pmTimeline = document.getElementById("pmTimeline");
+        const am = data.filter(e => new Date(e.timestamp).getHours() < 12).slice(0, 24);
+        const pm = data.filter(e => new Date(e.timestamp).getHours() >= 12).slice(0, 24);
+        renderTimeline('am-timeline', am);
+        renderTimeline('pm-timeline', pm);
 
-        const amData = data.filter(entry => new Date(entry.timestamp).getHours() < 12).slice(0, 8);
-        const pmData = data.filter(entry => new Date(entry.timestamp).getHours() >= 12).slice(0, 8);
-
-        [...amData, ...pmData].forEach(entry => {
-          const date = new Date(entry.timestamp);
-          const hour = date.getHours();
-          const timeStr = date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-          const deg = (entry.windDeg + 180) % 360;
-
-          const arrowDiv = document.createElement("div");
-          arrowDiv.className = "arrow";
-          arrowDiv.style.transform = `rotate(${deg}deg)`;
-          if (isNorthEast(deg)) arrowDiv.classList.add("highlight");
-
-          const entryDiv = document.createElement("div");
-          entryDiv.className = "entry";
-          entryDiv.appendChild(arrowDiv);
-
-          const label = document.createElement("div");
-          label.textContent = timeStr;
-          entryDiv.appendChild(label);
-
-          if (hour < 12) {
-            amTimeline.appendChild(entryDiv);
-          } else {
-            pmTimeline.appendChild(entryDiv);
-          }
-        });
+        // 前日・翌日リンクの生成
+        const dateObj = new Date(targetDate);
+        const prev = new Date(dateObj); prev.setDate(prev.getDate() - 1);
+        const next = new Date(dateObj); next.setDate(next.getDate() + 1);
+        document.getElementById('prev').href = `?date=${prev.toISOString().split('T')[0]}`;
+        document.getElementById('next').href = `?date=${next.toISOString().split('T')[0]}`;
       })
       .catch(err => {
-        alert("データ取得エラー：" + err);
+        document.body.innerHTML += `<p style="color:red;">データ取得エラー：${err}</p>`;
       });
   </script>
 </body>
 </html>
+
